test/corpus/label.test
==========
Basic labeled statement
==========
label: def a = 1;
---

(source_file
  (label
    name: (identifier))
  (declaration
    name: (identifier)
    value: (number_literal)))

==========
Spock test
==========
class Test {
    def testAdd() {
        when:
        def a = 10
        def b = 10
        def result = a + b
        then:
        result == 20
     }
}
---

(source_file
  (class_definition
    name: (identifier)
    body: (closure
      (function_definition
        function: (identifier)
        parameters: (parameter_list)
        body: (closure
          (label
            name: (identifier))
          (declaration
            name: (identifier)
            value: (number_literal))
          (declaration
            name: (identifier)
            value: (number_literal))
          (declaration
            name: (identifier)
            value: (binary_op
              (juxt_function_call
                function: (identifier)
                args: (argument_list
                  (unary_op
                    (juxt_function_call
                      function: (identifier)
                      args: (argument_list
                        (map_item
                          key: (identifier)
                          value: (identifier)))))))
              (number_literal))))))))
